--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,26 +6,35 @@
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
+        @Styles.Render("Content/bootstrap")
         @Scripts.Render("~/bundles/modernizr")
     </head>
     <body>
         <header>
             <div class="content-wrapper">
-                <div class="float-left">
+                @*<div class="float-left">
                     <p class="site-title">@Html.ActionLink("your logo here", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <section id="login">
+                </div>*@
+               @* <div class="float-right">*@
+                  @*  <section id="login">
                         @Html.Partial("_LoginPartial")
-                    </section>
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    </section>*@
+                    <nav class="navbar">
+                        <div class ="navbar-inner">
+                           @* <div class="row">
+                                <div class="span12">*@
+                            <a class="brand" href="http://www.ericpellegrino.com">Eric Pellegrino</a>
+                        <ul class="nav">
+                          @*  <li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            <li>@Html.Partial("_LoginPartial")</li>
                         </ul>
+                        @*</div>
+                        </div>*@
+                       </div>
                     </nav>
-                </div>
+               @* </div>*@
             </div>
         </header>
         <div id="body">
@@ -43,6 +52,17 @@
         </footer>
 
         @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
         @RenderSection("scripts", required: false)
     </body>
 </html>
+
+<style>
+    .navbar navbar-fixed-top {
+
+        margin-bottom:40px;
+    }
+
+
+
+</style>
