--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -3,32 +3,18 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
+    @*<h1>@ViewBag.Title.</h1>
+    <h2>@ViewBag.Message</h2>*@
 </hgroup>
 
 <article>
     <p>
-        Use this area to provide additional information.
+       Eric J. Pellegrino is a web developer currently residing in Buffalo, New York.  
     </p>
 
     <p>
-        Use this area to provide additional information.
+        I enjoy all types of music and in my free time love visitng micro-brewering.
     </p>
 
-    <p>
-        Use this area to provide additional information.
-    </p>
 </article>
 
-<aside>
-    <h3>Aside Title</h3>
-    <p>
-        Use this area to provide additional information.
-    </p>
-    <ul>
-        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-    </ul>
-</aside>
