--- a/Views/Artist/AddArtist.cshtml
+++ b/Views/Artist/AddArtist.cshtml
@@ -24,7 +24,7 @@
     <dd>@Html.ValidationMessageFor(x => x.LastName)</dd>
 </dl>
 
-<input type="submit" name="Submit" />
+<button class="btn btn-large btn-primary"  type="submit" name="Submit" >Submit </button>
 }
 
 
